# ia-gastos

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: ejemplos.csv
src/ia_gastos/: __init__.py  budget.py  cli.py  db.py  ics.py  models.py  nlp.py  notify.py  rules.py
